tdf#96421: Return if no window is realized

Change-Id: I13de7e6eae4e73932e8441ba2e2ad3e4ff888f41